issue450/test_maxpool_pad_1.mlir.log
within split at ./issue450/test_maxpool_pad_1.mlir.decomposed.mlir:1 offset :10:10: error: 'tensor.cast' op operand type 'tensor<1x64x115x113xf32>' and result type 'tensor<1x64x114x114xf32>' are cast incompatible
    %1 = torch.aten.constant_pad_nd %arg0, %0, %float-1.797690e308 : !torch.vtensor<[1,64,111,111],f32>, !torch.list<int>, !torch.float -> !torch.vtensor<[1,64,114,114],f32>
         ^
within split at ./issue450/test_maxpool_pad_1.mlir.decomposed.mlir:1 offset :10:10: note: see current operation: %11 = "tensor.cast"(%10) : (tensor<1x64x115x113xf32>) -> tensor<1x64x114x114xf32>
